@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity kase {}
entity case_type {}
entity case_role {}
entity communication_event {}
entity case_role_type {}
entity party {}
entity communication_event_purpose {}
entity communication_event_work_effort {}
entity work_effort {}

'note top of work_effort : This reference will be via UUID, since work effort will be in a different database

kase }|..|| case_type
kase ||..|{ case_role
kase ||..|{ communication_event

case_role }|..|| case_role_type
case_role }|..|| party


communication_event ||..|{ communication_event_purpose
communication_event ||..|{ communication_event_work_effort
work_effort ||..|{ communication_event_work_effort

@enduml
